# demo-real-world

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  lint-staged.config.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml
.husky/: pre-commit
apps/backend/: .pre-commit-config.yaml  config.py  engine.py  main.py  pyproject.toml  utils.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1a8a2bec855b_rename_image_link_to_image_url_in_user_.py  3bd7ba95770e_added_article_model_and_related_fields_.py  504ec8bc8863_made_email_and_password_user_fields_.py  7934f5fc822e_added_followers_relationship_to_user_.py  7be6d9d533fa_deleted_backrefs_for_follower_.py  a5309ba13f2a_init_commit_added_user_model.py  cbfeae7b52f1_following_logic_for_user_model.py  d8f21d7a5072_added_article_model_and_related_fields.py  e319653ed444_init_commit_added_user_model.py  ebf88715edb5_add_username_bio_and_image_fields_to_.py
apps/backend/api/: README.md  auth.py  exceptions.py
apps/backend/api/crud/: profile.py  user.py
apps/backend/api/models/: __init__.py  article.py  base.py  user.py
apps/backend/api/routes/: profile.py  user.py
apps/backend/api/schemas/: article.py  profile.py  user.py
apps/frontend/: package.json  rsbuild.config.ts  vitest.config.ts
apps/frontend-e2e/: playwright.config.ts
apps/frontend/src/app/: App.spec.ts
