[tool.poetry]
name = "demo-real-world"
version = "0.1.0"
description = "Demo App of RealWorld"
authors = ["Andriy Sydorenko <sidorenkoandrij217@gmail.com>"]
license = { file = "LICENSE" }
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
