[tool.poetry]
name = "demo-real-world"
version = "0.1.0"
description = "Demo App of RealWorld"
authors = ["Andriy Sydorenko <sidorenkoandrij217@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
asyncpg = "^0.30.0"
psycopg2 = {extras = ["binary"], version = "^2.9.10"}
pyjwt = "^2.10.1"
cryptography = "^44.0.1"
argon2-cffi = "^23.1.0"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.alembic
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
